tests/snapshots/09_recursive_all_options_08_FilterExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------------------+
| numbers.n + Int64(1) |
|======================|
| 2                    |
+----------------------+
