tests/snapshots/09_recursive_all_options_16_RecursiveQueryExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---+
| n |
|===|
| 1 |
|---|
| 2 |
|---|
| 3 |
+---+
