tests/snapshots/11_weather_00_AggregateExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+-----------------+
| MinTemp | count(Int64(1)) |
|=========+=================|
| 10.1    | 4               |
|---------+-----------------|
| 13.6    | 3               |
|---------+-----------------|
| 17.2    | 2               |
|---------+-----------------|
| 11.8    | 1               |
|---------+-----------------|
| 14.8    | 2               |
+---------+-----------------+
