tests/snapshots/11_weather_04_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+---------+
| count(*) | MinTemp |
|==========+=========|
| 4        | 10.1    |
|----------+---------|
| 3        | 13.6    |
|----------+---------|
| 2        | 17.2    |
|----------+---------|
| 1        | 11.8    |
|----------+---------|
| 2        | 14.8    |
+----------+---------+
