tests/snapshots/11_weather_05_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| 10.1    | 3                      |
|---------+------------------------|
| 13.6    | 3                      |
|---------+------------------------|
| 17.2    | 2                      |
|---------+------------------------|
| 11.8    | 1                      |
|---------+------------------------|
| 14.8    | 2                      |
+---------+------------------------+
