tests/snapshots/12_distributed_weather_memory_00_AggregateExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+-----------------+
| MinTemp | count(Int64(1)) |
|=========+=================|
| 10.1    | 4               |
|---------+-----------------|
| 12.3    | 2               |
|---------+-----------------|
| 8.1     | 2               |
|---------+-----------------|
| 6.9     | 1               |
|---------+-----------------|
| 6.3     | 3               |
+---------+-----------------+
