tests/snapshots/12_distributed_weather_memory_03_CoalescePartitionsExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+---------+
| count(*) | MinTemp |
|==========+=========|
| 3        | 11.3    |
|----------+---------|
| 2        | 4.2     |
|----------+---------|
| 3        | 5.3     |
|----------+---------|
| 3        | 8.4     |
|----------+---------|
| 1        | 1.5     |
+----------+---------+
