tests/snapshots/12_distributed_weather_memory_06_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+---------+
| count(*) | MinTemp |
|==========+=========|
| 4        | 10.1    |
|----------+---------|
| 2        | 12.3    |
|----------+---------|
| 2        | 8.1     |
|----------+---------|
| 1        | 6.9     |
|----------+---------|
| 3        | 6.3     |
+----------+---------+
