tests/snapshots/12_distributed_weather_memory_07_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| 10.1    | 1                      |
|---------+------------------------|
| 12.3    | 1                      |
|---------+------------------------|
| 8.1     | 2                      |
|---------+------------------------|
| 6.9     | 1                      |
|---------+------------------------|
| 6.3     | 2                      |
+---------+------------------------+
