tests/snapshots/12_distributed_weather_memory_08_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| 7.4     | 2                      |
|---------+------------------------|
| 8.3     | 3                      |
|---------+------------------------|
| 10.1    | 1                      |
|---------+------------------------|
| 12.0    | 1                      |
|---------+------------------------|
| 12.9    | 1                      |
+---------+------------------------+
