tests/snapshots/12_distributed_weather_memory_trace.snap
---
source: tests/integration_tests.rs
expression: json_lines
---
[
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "read_query",
      "query": "SELECT\n    count(*),\n    \"MinTemp\"\nFROM weather\nGROUP BY \"MinTemp\"\n"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "logical_plan": "Projection: count(Int64(1)) AS count(*), weather.MinTemp [count(*):Int64, MinTemp:Float64;N]\n  Aggregate: groupBy=[[weather.MinTemp]], aggr=[[count(Int64(1))]] [MinTemp:Float64;N, count(Int64(1)):Int64]\n    TableScan: weather [MinTemp:Float64;N, MaxTemp:Float64;N, Rainfall:Float64;N, Evaporation:Float64;N, Sunshine:Utf8View;N, WindGustDir:Utf8View;N, WindGustSpeed:Utf8View;N, WindDir9am:Utf8View;N, WindDir3pm:Utf8View;N, WindSpeed9am:Utf8View;N, WindSpeed3pm:Int64;N, Humidity9am:Int64;N, Humidity3pm:Int64;N, Pressure9am:Float64;N, Pressure3pm:Float64;N, Cloud9am:Int64;N, Cloud3pm:Int64;N, Temp9am:Float64;N, Temp3pm:Float64;N, RainToday:Utf8View;N, RISK_MM:Float64;N, RainTomorrow:Utf8View;N]",
      "name": "parse_sql",
      "sql": "SELECT\n    count(*),\n    \"MinTemp\"\nFROM weather\nGROUP BY \"MinTemp\"\n"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "create_physical_plan",
      "physical_plan": "DistributedExec\n  CoalescePartitionsExec\n    ProjectionExec: expr=[count(Int64(1))@1 as count(*), MinTemp@0 as MinTemp]\n      AggregateExec: mode=FinalPartitioned, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]\n        CoalesceBatchesExec: target_batch_size=8192\n          RepartitionExec: partitioning=Hash([MinTemp@0], 8), input_partitions=8\n            RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=3\n              AggregateExec: mode=Partial, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]\n                DataSourceExec: file_groups={3 groups: [[<TPCH_TABLES_DIR>/weather/result-000000.parquet], [<TPCH_TABLES_DIR>/weather/result-000001.parquet], [<TPCH_TABLES_DIR>/weather/result-000002.parquet]]}, projection=[MinTemp], file_type=parquet\n"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.metrics.bloom_filter_eval_time": "0.00ms",
      "datafusion.metrics.bytes_scanned": "5404",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.file_open_errors": "0",
      "datafusion.metrics.file_scan_errors": "0",
      "datafusion.metrics.metadata_load_time": "0.00ms",
      "datafusion.metrics.num_predicate_creation_errors": "0",
      "datafusion.metrics.output_rows": "366",
      "datafusion.metrics.page_index_eval_time": "0.00ms",
      "datafusion.metrics.page_index_rows_matched": "0",
      "datafusion.metrics.page_index_rows_pruned": "0",
      "datafusion.metrics.predicate_evaluation_errors": "0",
      "datafusion.metrics.pushdown_rows_matched": "0",
      "datafusion.metrics.pushdown_rows_pruned": "0",
      "datafusion.metrics.row_groups_matched_bloom_filter": "0",
      "datafusion.metrics.row_groups_matched_statistics": "0",
      "datafusion.metrics.row_groups_pruned_bloom_filter": "0",
      "datafusion.metrics.row_groups_pruned_statistics": "0",
      "datafusion.metrics.row_pushdown_eval_time": "0.00ms",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.statistics_eval_time": "0.00ms",
      "datafusion.metrics.time_elapsed_opening": "0.00ms",
      "datafusion.metrics.time_elapsed_processing": "0.00ms",
      "datafusion.metrics.time_elapsed_scanning_total": "0.00ms",
      "datafusion.metrics.time_elapsed_scanning_until_data": "0.00ms",
      "datafusion.node": "DataSourceExec: file_groups={3 groups: [[<TPCH_TABLES_DIR>/weather/result-000000.parquet], [<TPCH_TABLES_DIR>/weather/result-000001.parquet], [<TPCH_TABLES_DIR>/weather/result-000002.parquet]]}, projection=[MinTemp], file_type=parquet",
      "datafusion.partitioning": "UnknownPartitioning(3)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "DataSourceExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.output_rows": "249",
      "datafusion.metrics.peak_mem_used": "19080",
      "datafusion.metrics.skipped_aggregation_rows": "0",
      "datafusion.metrics.spill_count": "0",
      "datafusion.metrics.spilled_bytes": "0.0 B",
      "datafusion.metrics.spilled_rows": "0",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.node": "AggregateExec: mode=Partial, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]",
      "datafusion.partitioning": "UnknownPartitioning(3)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "AggregateExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.fetch_time": "0.00ms",
      "datafusion.metrics.repartition_time": "0.00ms",
      "datafusion.metrics.send_time": "0.00ms",
      "datafusion.node": "RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=3",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.fetch_time": "0.00ms",
      "datafusion.metrics.repartition_time": "0.00ms",
      "datafusion.metrics.send_time": "0.00ms",
      "datafusion.node": "RepartitionExec: partitioning=Hash([MinTemp@0], 8), input_partitions=8",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.output_rows": "249",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.node": "CoalesceBatchesExec: target_batch_size=8192",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalesceBatchesExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.output_rows": "180",
      "datafusion.metrics.peak_mem_used": "41632",
      "datafusion.metrics.spill_count": "0",
      "datafusion.metrics.spilled_bytes": "0.0 B",
      "datafusion.metrics.spilled_rows": "0",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.node": "AggregateExec: mode=FinalPartitioned, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "AggregateExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.output_rows": "180",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.node": "ProjectionExec: expr=[count(Int64(1))@1 as count(*), MinTemp@0 as MinTemp]",
      "datafusion.partitioning": "Hash([MinTemp@1], 8)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.metrics.elapsed_compute": "0.00ms",
      "datafusion.metrics.end_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.metrics.output_rows": "180",
      "datafusion.metrics.start_timestamp": "1970-01-01 00:00:00 UTC",
      "datafusion.node": "CoalescePartitionsExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalescePartitionsExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "DistributedExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "datafusion.preview": "<redacted>",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "DistributedExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "run_traced_query",
      "query_name": "weather"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "12_distributed_weather_memory"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  }
]
